import 'package:flutter/material.dart';
import 'simple_native_ad.dart';
import 'list_native_ad.dart';
import 'positioned_stack_native_ad.dart';

const _menu = ['Simple', 'List', 'Positioned'];

class MenuNativeAd extends StatefulWidget {
  @override
  _MenuNativeAdState createState() => new _MenuNativeAdState();
}

...
